Fix (somewhat) icon alignment
ERM: #10587

--- a/resources/ext.blueSpiceExtendedSearch.SearchCenter.less
+++ b/resources/ext.blueSpiceExtendedSearch.SearchCenter.less
@@ -118,8 +118,11 @@ div#bs-es-tools {
 		}
 		#bs-extendedsearch-filter-add-button {
 			position: absolute;
-			right: 10px;
-			top: 8px;
+			right: 23px;
+			top: 10px;
+			a {
+				padding: 0;
+			}
 			.bs-extendedsearch-filter-add-widget-button:before {
 				content: '\ea5b';
 				font-family: icomoon !important;
@@ -130,7 +133,6 @@ div#bs-es-tools {
 				display: inline-block;
 			}
 			.bs-extendedsearch-filter-add-widget-button {
-				margin-top: -2em; //can not override padding, so negative margin
 				border-style: none !important;
 				background-color: transparent !important;
 				font-weight: normal !important;
